<resources>
    <string name="app_name">AndroidTry3</string>
    <string name="button_clear">clear</string>
    <string name="button_negation">+-</string>
    <string name="button_division">/</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_multiple">*</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_subtract">-</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_sum">+</string>
    <string name="button_zero">0</string>
    <string name="button_dot">.</string>
    <string name="button_equal">=</string>
    <string name="error_message">Error, press clear</string>
    <string name="button_tg">Tg</string>
    <string name="button_sin">Sin</string>
    <string name="button_cos">Cos</string>
    <string name="button_ctg">Ctg</string>
    <string name="button_second_root">√</string>
    <string name="button_third_root"><![CDATA[<p>√<sup>3</sup></p>]]></string>
    <string name="button_second_grade"><![CDATA[<p>X<sup>2</sup></p>]]></string>
    <string name="button_third_grade"><![CDATA[<p>X<sup>3</sup></p>]]></string>

</resources>
