<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:textDirection="rtl">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="What is Lorem Ipsum"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="What is Lorem Ipsum"
                    android:textSize="20sp"/>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:maxLength="9"
            android:background="@drawable/bg_textview"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:columnCount="4"
            android:rowCount="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_clear"
                android:layout_gravity="fill"
                android:id="@+id/button_clear"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_c"
                android:layout_gravity="fill"
                android:id="@+id/button_c"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_percentage"
                android:layout_gravity="fill"
                android:id="@+id/button_percentage"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_division"
                android:layout_gravity="fill"
                android:id="@+id/button_division"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_seven"
                android:layout_gravity="fill"
                android:id="@+id/button_seven"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_eight"
                android:layout_gravity="fill"
                android:id="@+id/button_eight"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_nine"
                android:layout_gravity="fill"
                android:id="@+id/button_nine"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_multiple"
                android:layout_gravity="fill"
                android:id="@+id/button_multiple"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_four"
                android:layout_gravity="fill"
                android:id="@+id/button_four"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_five"
                android:layout_gravity="fill"
                android:id="@+id/button_button_five"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_six"
                android:layout_gravity="fill"
                android:id="@+id/button_six"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_subtract"
                android:layout_gravity="fill"
                android:id="@+id/button_subtract"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_one"
                android:layout_gravity="fill"
                android:id="@+id/button_one"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_two"
                android:layout_gravity="fill"
                android:id="@+id/button_two"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_three"
                android:layout_gravity="fill"
                android:id="@+id/button_three"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_sum"
                android:layout_gravity="fill"
                android:id="@+id/button_sun"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_zero"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:id="@+id/button_zero"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_dot"
                android:layout_gravity="fill"
                android:layout_column="2"
                android:id="@+id/button_dot"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/button_equal"
                android:layout_gravity="fill"
                android:id="@+id/button_equal"/>
        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>